--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,8 @@
 			href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Open+Sans&display=swap"
 			rel="stylesheet"
 		/>
-
+		<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 		%sveltekit.head%
 	</head>
 	<body>
