--- a/src/app.html
+++ b/src/app.html
@@ -17,6 +17,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light.css" />
 		%sveltekit.head%
+		<title>miyatracki</title>
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
